<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">android-tech-poc</string>
    <string name="app_scheme">androidtechpoc</string>

    <string name="home_back_to_content">Back</string>
    <string name="home_bottom_navigation">Bottom Navigation</string>
    <string name="home_tab_a">A Screen</string>
    <string name="home_tab_b">B Screen</string>
    <string name="home_tab_c">C Screen</string>
    <string name="home_tab_d">D Screen</string>

    <string name="nav_graph_home_a_title">NavGraph Home A</string>
    <string name="nav_graph_home_action">Navigate</string>
    <string name="nav_graph_home_action_sub">Navigate to sub-destination</string>
    <string name="nav_graph_home_b_title">NavGraph Home B</string>
    <string name="nav_graph_home_back_action">Back</string>
    <string name="nav_graph_home_c_sub_title">NavGraph Home C Sub</string>
    <string name="nav_graph_home_c_title">NavGraph Home C</string>
    <string name="nav_graph_home_d_title">NavGraph Home D</string>

    <string name="topic_home">Home</string>
    <string name="topic_home_basic_motion_layout">Basic Motion Layout</string>
    <string name="topic_home_motion_layout">Home Motion Layout</string>
    <string name="topic_navigation_component">Navigation Component</string>
    <string name="topic_reverse_engineering">Reverse Engineering</string>
    <string name="topic_reverse_engineering_description">Try to find our suspicious token around this page with the steps below\n
        1. Build a debug APK of this application.\n
        2. Find suspicious token in the debug APK with reverse engineering technique.\n
        3. Build a release APK of this application.\n
        4. Find suspicious token in the release APK with reverse engineering technique.\n\n
        Bonus\n
        1. Find a deep link to NavGraph Home D page in the release APK with reverse engineering technique.
    </string>
    <string name="topic_vpn">VPN</string>
</resources>
