<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/NavGraph.Label"
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_graph_home_a_title"
        app:layout_constraintBottom_toTopOf="@id/bAction"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/NavGraph.Button"
        android:id="@+id/bAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_graph_home_action"
        app:layout_constraintBottom_toTopOf="@id/bBackAction"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/NavGraph.SubButton"
        android:id="@+id/bBackAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_graph_home_back_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bAction" />

</androidx.constraintlayout.widget.ConstraintLayout>
